--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.0088dafc.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.97d2022b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.6dba6488.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.edad74cd.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.0222f1b2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.1c228e47.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.a68fabdd.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.6e67e459.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.ad52e74a.js">
 	</head>
@@ -23,7 +23,7 @@
 			
 			<script>
 				{
-					__sveltekit_r9tdlm = {
+					__sveltekit_9h1n21 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -33,8 +33,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.0088dafc.js"),
-						import("./_app/immutable/entry/app.0222f1b2.js")
+						import("./_app/immutable/entry/start.97d2022b.js"),
+						import("./_app/immutable/entry/app.a68fabdd.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
@@ -46,5 +46,6 @@
 				}
 			</script>
 		</div>
+		<div>Hello</div>
 	</body>
 </html>
